--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/core": "^5.5.0",
     "@ionic-native/http": "^5.4.0",
+    "@ionic-native/local-notifications": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/lab": "^1.0.24",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "2.0.8",
     "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-local-notifications": "git+https://github.com/katzer/cordova-plugin-local-notifications.git#ios10",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "ngx-socket-io": "^2.1.1",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.2.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -79,7 +83,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "de.appplant.cordova.plugin.local-notification": {}
     },
     "platforms": [
       "android"
