--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
     "cordova-plugin-advanced-http": "2.0.8",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-local-notifications": "git+https://github.com/katzer/cordova-plugin-local-notifications.git#ios10",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "3.2.0",
@@ -84,7 +86,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
       "cordova-plugin-whitelist": {},
-      "de.appplant.cordova.plugin.local-notification": {}
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "android"
