--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/lab": "^1.0.24",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-advanced-http": "2.0.8",
     "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-file": "6.0.1",
@@ -89,7 +90,8 @@
       "cordova-plugin-local-notification": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
